--- a/imgui.ini
+++ b/imgui.ini
@@ -22,7 +22,7 @@ Collapsed=0
 [Window][Video card info]
 ViewportPos=36,30
 ViewportId=0x11C0D9F5
-Size=416,150
+Size=411,153
 Collapsed=0
 
 [Window][Marked Pokemon]
@@ -32,10 +32,34 @@ Size=381,742
 Collapsed=0
 
 [Window][Pokemon]
-ViewportPos=40,257
+ViewportPos=36,348
 ViewportId=0xAD61A96F
-Size=369,252
+Size=554,502
 Collapsed=0
 
+[Window][Ray equation]
+ViewportPos=39,186
+ViewportId=0x74FF2C69
+Size=290,137
+Collapsed=0
+
+[Window][Pokemon 0]
+ViewportPos=39,331
+ViewportId=0xA4D966FE
+Size=340,152
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Pokemon 1]
+ViewportPos=39,331
+ViewportId=0xA4D966FE
+Pos=0,154
+Size=340,146
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
+DockNode    ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
 
