--- a/imgui.ini
+++ b/imgui.ini
@@ -58,6 +58,12 @@ Size=340,146
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Render Transform]
+ViewportPos=68,333
+ViewportId=0x115FD301
+Size=384,231
+Collapsed=0
+
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
