class Renderer can now handle entities

--- a/imgui.ini
+++ b/imgui.ini
@@ -64,6 +64,30 @@ ViewportId=0x115FD301
 Size=384,231
 Collapsed=0
 
+[Window][Entity]
+ViewportPos=52,228
+ViewportId=0x0984415E
+Size=352,208
+Collapsed=0
+
+[Window][Camera]
+ViewportPos=44,450
+ViewportId=0x3CB0EB33
+Size=373,173
+Collapsed=0
+
+[Window][Renderer]
+ViewportPos=79,653
+ViewportId=0x08EFC3CA
+Size=303,166
+Collapsed=0
+
+[Window][Mesh]
+ViewportPos=43,236
+ViewportId=0x415D9568
+Size=339,116
+Collapsed=0
+
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
