--- a/imgui.ini
+++ b/imgui.ini
@@ -20,10 +20,11 @@ Size=383,156
 Collapsed=0
 
 [Window][Video card info]
-ViewportPos=36,30
-ViewportId=0x11C0D9F5
-Size=411,153
+ViewportPos=65,51
+ViewportId=0x4DBAC3CB
+Size=365,250
 Collapsed=0
+DockId=0x00000007,2
 
 [Window][Marked Pokemon]
 ViewportPos=28,192
@@ -71,10 +72,11 @@ Size=352,208
 Collapsed=0
 
 [Window][Camera]
-ViewportPos=44,450
-ViewportId=0x3CB0EB33
-Size=373,173
+ViewportPos=17,309
+ViewportId=0xD4B39271
+Size=354,165
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Renderer]
 ViewportPos=79,653
@@ -83,13 +85,65 @@ Size=303,166
 Collapsed=0
 
 [Window][Mesh]
-ViewportPos=43,236
-ViewportId=0x415D9568
-Size=339,116
+ViewportPos=17,309
+ViewportId=0xD4B39271
+Pos=0,167
+Size=354,159
 Collapsed=0
+DockId=0x00000006,0
+
+[Window][Camera speed]
+ViewportPos=18,655
+ViewportId=0x92837CDD
+Size=388,144
+Collapsed=0
+
+[Window][System info]
+ViewportPos=129,44
+ViewportId=0x275B7A68
+Size=445,168
+Collapsed=0
+
+[Window][CPU info]
+ViewportPos=17,16
+ViewportId=0x4DBAC3CB
+Size=398,233
+Collapsed=0
+
+[Window][OS]
+ViewportPos=65,51
+ViewportId=0x4DBAC3CB
+Size=365,250
+Collapsed=0
+DockId=0x00000007,1
+
+[Window][Cpu]
+ViewportPos=65,51
+ViewportId=0x4DBAC3CB
+Size=365,250
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Bios]
+ViewportPos=65,51
+ViewportId=0x4DBAC3CB
+Size=365,250
+Collapsed=0
+DockId=0x00000007,3
+
+[Window][Memory]
+ViewportPos=65,51
+ViewportId=0x4DBAC3CB
+Size=365,250
+Collapsed=0
+DockId=0x00000007,4
 
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
+DockNode    ID=0x00000004 Pos=17,309 Size=354,326 Split=Y
+  DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=668,87 Selected=0x0545BD69
+  DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=668,84 Selected=0x8242F0B0
+DockNode    ID=0x00000007 Pos=65,51 Size=365,250 Selected=0xB2805FDB
 
