--- a/imgui.ini
+++ b/imgui.ini
@@ -20,11 +20,10 @@ Size=383,156
 Collapsed=0
 
 [Window][Video card info]
-ViewportPos=65,51
-ViewportId=0x4DBAC3CB
-Size=365,250
+Pos=203,895
+Size=1553,185
 Collapsed=0
-DockId=0x00000007,2
+DockId=0x00000007,0
 
 [Window][Marked Pokemon]
 ViewportPos=28,192
@@ -72,11 +71,10 @@ Size=352,208
 Collapsed=0
 
 [Window][Camera]
-ViewportPos=17,309
-ViewportId=0xD4B39271
-Size=354,165
+Pos=1758,19
+Size=162,532
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000008,0
 
 [Window][Renderer]
 ViewportPos=79,653
@@ -85,18 +83,16 @@ Size=303,166
 Collapsed=0
 
 [Window][Mesh]
-ViewportPos=17,309
-ViewportId=0xD4B39271
-Pos=0,167
-Size=354,159
+Pos=1825,293
+Size=95,530
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000004,0
 
 [Window][Camera speed]
-ViewportPos=18,655
-ViewportId=0x92837CDD
-Size=388,144
+Pos=1758,553
+Size=162,527
 Collapsed=0
+DockId=0x00000009,0
 
 [Window][System info]
 ViewportPos=129,44
@@ -111,39 +107,79 @@ Size=398,233
 Collapsed=0
 
 [Window][OS]
-ViewportPos=65,51
-ViewportId=0x4DBAC3CB
-Size=365,250
-Collapsed=0
-DockId=0x00000007,1
-
-[Window][Cpu]
-ViewportPos=65,51
-ViewportId=0x4DBAC3CB
-Size=365,250
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][Bios]
-ViewportPos=65,51
-ViewportId=0x4DBAC3CB
-Size=365,250
+Pos=203,895
+Size=1553,185
 Collapsed=0
 DockId=0x00000007,3
 
-[Window][Memory]
-ViewportPos=65,51
-ViewportId=0x4DBAC3CB
-Size=365,250
+[Window][Cpu]
+Pos=203,895
+Size=1553,185
+Collapsed=0
+DockId=0x00000007,1
+
+[Window][Bios]
+Pos=203,895
+Size=1553,185
 Collapsed=0
 DockId=0x00000007,4
 
+[Window][Memory]
+Pos=203,895
+Size=1553,185
+Collapsed=0
+DockId=0x00000007,2
+
+[Window][Dear ImGui Demo]
+Pos=0,19
+Size=201,1061
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][DockSpace Demo]
+ViewportPos=585,179
+ViewportId=0x4647B76E
+Size=643,720
+Collapsed=0
+
+[Window][DockSpace]
+Pos=0,0
+Size=1920,1080
+Collapsed=0
+
+[Window][Framebuffer]
+Pos=198,19
+Size=1094,760
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][Framebuffer 1]
+Pos=203,19
+Size=760,874
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][Framebuffer 2]
+Pos=965,19
+Size=791,874
+Collapsed=0
+DockId=0x0000000F,0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
-DockNode    ID=0x00000004 Pos=17,309 Size=354,326 Split=Y
-  DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=668,87 Selected=0x0545BD69
-  DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=668,84 Selected=0x8242F0B0
-DockNode    ID=0x00000007 Pos=65,51 Size=365,250 Selected=0xB2805FDB
+DockNode            ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
+  DockNode          ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
+  DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
+DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1061 Split=X Selected=0x92A5F8F1
+  DockNode          ID=0x0000000C Parent=0x09EF459F SizeRef=201,701 Selected=0xE87781F4
+  DockNode          ID=0x0000000D Parent=0x09EF459F SizeRef=877,701 Split=X
+    DockNode        ID=0x00000005 Parent=0x0000000D SizeRef=916,701 Split=X
+      DockNode      ID=0x0000000B Parent=0x00000005 SizeRef=916,947 Split=Y
+        DockNode    ID=0x0000000A Parent=0x0000000B SizeRef=1093,514 Split=X
+          DockNode  ID=0x0000000E Parent=0x0000000A SizeRef=760,966 CentralNode=1 Selected=0xD06A1EA9
+          DockNode  ID=0x0000000F Parent=0x0000000A SizeRef=791,966 Selected=0x97CA6479
+        DockNode    ID=0x00000007 Parent=0x0000000B SizeRef=1093,185 Selected=0x1B6C18CE
+      DockNode      ID=0x00000004 Parent=0x00000005 SizeRef=162,947
+    DockNode        ID=0x00000006 Parent=0x0000000D SizeRef=162,701 Split=Y Selected=0x0545BD69
+      DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=162,351 Selected=0x0545BD69
+      DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=162,348 Selected=0x0EBCCEC8
 
