--- a/Architect.vcxproj.filters
+++ b/Architect.vcxproj.filters
@@ -177,6 +177,9 @@
     <ClCompile Include="src\gfx\opengl\framebuffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\gfx\render\scenerenderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\fileio.h">
@@ -366,6 +369,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\gfx\opengl\framebuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\gfx\render\scenerenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
