--- a/imgui.ini
+++ b/imgui.ini
@@ -20,8 +20,8 @@ Size=383,156
 Collapsed=0
 
 [Window][Video card info]
-Pos=203,895
-Size=1553,185
+Pos=208,895
+Size=1549,185
 Collapsed=0
 DockId=0x00000007,0
 
@@ -65,14 +65,14 @@ Size=384,231
 Collapsed=0
 
 [Window][Entity]
-ViewportPos=52,228
-ViewportId=0x0984415E
-Size=352,208
+Pos=0,19
+Size=384,1061
 Collapsed=0
+DockId=0x00000010,0
 
 [Window][Camera]
-Pos=1758,19
-Size=162,532
+Pos=1661,19
+Size=259,1061
 Collapsed=0
 DockId=0x00000008,0
 
@@ -89,8 +89,8 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Camera speed]
-Pos=1758,553
-Size=162,527
+Pos=1759,553
+Size=161,527
 Collapsed=0
 DockId=0x00000009,0
 
@@ -107,32 +107,32 @@ Size=398,233
 Collapsed=0
 
 [Window][OS]
-Pos=203,895
-Size=1553,185
+Pos=208,895
+Size=1549,185
 Collapsed=0
 DockId=0x00000007,3
 
 [Window][Cpu]
-Pos=203,895
-Size=1553,185
+Pos=208,895
+Size=1549,185
 Collapsed=0
 DockId=0x00000007,1
 
 [Window][Bios]
-Pos=203,895
-Size=1553,185
+Pos=208,895
+Size=1549,185
 Collapsed=0
 DockId=0x00000007,4
 
 [Window][Memory]
-Pos=203,895
-Size=1553,185
+Pos=208,895
+Size=1549,185
 Collapsed=0
 DockId=0x00000007,2
 
 [Window][Dear ImGui Demo]
 Pos=0,19
-Size=201,1061
+Size=206,1061
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -154,32 +154,40 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Framebuffer 1]
-Pos=203,19
-Size=760,874
+Pos=386,19
+Size=1273,1061
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Framebuffer 2]
-Pos=965,19
-Size=791,874
+Pos=1049,19
+Size=708,874
 Collapsed=0
 DockId=0x0000000F,0
 
+[Window][Angle]
+Pos=0,19
+Size=201,701
+Collapsed=0
+DockId=0x0000000D,1
+
 [Docking][Data]
-DockNode            ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
-  DockNode          ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
-  DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
-DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1061 Split=X Selected=0x92A5F8F1
-  DockNode          ID=0x0000000C Parent=0x09EF459F SizeRef=201,701 Selected=0xE87781F4
-  DockNode          ID=0x0000000D Parent=0x09EF459F SizeRef=877,701 Split=X
-    DockNode        ID=0x00000005 Parent=0x0000000D SizeRef=916,701 Split=X
-      DockNode      ID=0x0000000B Parent=0x00000005 SizeRef=916,947 Split=Y
-        DockNode    ID=0x0000000A Parent=0x0000000B SizeRef=1093,514 Split=X
-          DockNode  ID=0x0000000E Parent=0x0000000A SizeRef=760,966 CentralNode=1 Selected=0xD06A1EA9
-          DockNode  ID=0x0000000F Parent=0x0000000A SizeRef=791,966 Selected=0x97CA6479
-        DockNode    ID=0x00000007 Parent=0x0000000B SizeRef=1093,185 Selected=0x1B6C18CE
-      DockNode      ID=0x00000004 Parent=0x00000005 SizeRef=162,947
-    DockNode        ID=0x00000006 Parent=0x0000000D SizeRef=162,701 Split=Y Selected=0x0545BD69
-      DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=162,351 Selected=0x0545BD69
-      DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=162,348 Selected=0x0EBCCEC8
+DockNode              ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
+  DockNode            ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
+  DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
+DockSpace             ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1061 Split=X Selected=0x92A5F8F1
+  DockNode            ID=0x00000010 Parent=0x09EF459F SizeRef=384,701 Selected=0xF57F7DD5
+  DockNode            ID=0x00000011 Parent=0x09EF459F SizeRef=1534,701 Split=X
+    DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=206,871 Selected=0xE87781F4
+    DockNode          ID=0x0000000D Parent=0x00000011 SizeRef=1384,871 Split=X
+      DockNode        ID=0x00000005 Parent=0x0000000D SizeRef=1273,701 Split=X
+        DockNode      ID=0x0000000B Parent=0x00000005 SizeRef=916,947 Split=Y
+          DockNode    ID=0x0000000A Parent=0x0000000B SizeRef=1093,514 Split=X
+            DockNode  ID=0x0000000E Parent=0x0000000A SizeRef=839,966 CentralNode=1 Selected=0xD06A1EA9
+            DockNode  ID=0x0000000F Parent=0x0000000A SizeRef=708,966 Selected=0x97CA6479
+          DockNode    ID=0x00000007 Parent=0x0000000B SizeRef=1093,185 Selected=0xFFE6EC1B
+        DockNode      ID=0x00000004 Parent=0x00000005 SizeRef=162,947
+      DockNode        ID=0x00000006 Parent=0x0000000D SizeRef=259,701 Split=Y Selected=0x0545BD69
+        DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=162,351 Selected=0x0545BD69
+        DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=162,348 Selected=0x0EBCCEC8
 
