--- a/imgui.ini
+++ b/imgui.ini
@@ -66,13 +66,13 @@ Collapsed=0
 
 [Window][Entity]
 Pos=0,19
-Size=384,1061
+Size=305,1061
 Collapsed=0
 DockId=0x00000010,0
 
 [Window][Camera]
-Pos=1661,19
-Size=259,1061
+Pos=1624,19
+Size=296,1061
 Collapsed=0
 DockId=0x00000008,0
 
@@ -154,8 +154,8 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Framebuffer 1]
-Pos=386,19
-Size=1273,1061
+Pos=307,19
+Size=1315,1061
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -171,23 +171,41 @@ Size=201,701
 Collapsed=0
 DockId=0x0000000D,1
 
+[Window][Renderer stats]
+ViewportPos=88,212
+ViewportId=0xB9C29B2D
+Size=316,475
+Collapsed=0
+
+[Window][Batching stats [%i]0]
+ViewportPos=91,693
+ViewportId=0x6B721375
+Size=338,265
+Collapsed=0
+
+[Window][Batching stats 0]
+Pos=0,19
+Size=305,1061
+Collapsed=0
+DockId=0x00000010,1
+
 [Docking][Data]
 DockNode              ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
   DockNode            ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
   DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
 DockSpace             ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1061 Split=X Selected=0x92A5F8F1
-  DockNode            ID=0x00000010 Parent=0x09EF459F SizeRef=384,701 Selected=0xF57F7DD5
-  DockNode            ID=0x00000011 Parent=0x09EF459F SizeRef=1534,701 Split=X
+  DockNode            ID=0x00000010 Parent=0x09EF459F SizeRef=305,701 Selected=0xF57F7DD5
+  DockNode            ID=0x00000011 Parent=0x09EF459F SizeRef=1613,701 Split=X
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=206,871 Selected=0xE87781F4
     DockNode          ID=0x0000000D Parent=0x00000011 SizeRef=1384,871 Split=X
-      DockNode        ID=0x00000005 Parent=0x0000000D SizeRef=1273,701 Split=X
+      DockNode        ID=0x00000005 Parent=0x0000000D SizeRef=1315,701 Split=X
         DockNode      ID=0x0000000B Parent=0x00000005 SizeRef=916,947 Split=Y
           DockNode    ID=0x0000000A Parent=0x0000000B SizeRef=1093,514 Split=X
             DockNode  ID=0x0000000E Parent=0x0000000A SizeRef=839,966 CentralNode=1 Selected=0xD06A1EA9
             DockNode  ID=0x0000000F Parent=0x0000000A SizeRef=708,966 Selected=0x97CA6479
           DockNode    ID=0x00000007 Parent=0x0000000B SizeRef=1093,185 Selected=0xFFE6EC1B
         DockNode      ID=0x00000004 Parent=0x00000005 SizeRef=162,947
-      DockNode        ID=0x00000006 Parent=0x0000000D SizeRef=259,701 Split=Y Selected=0x0545BD69
+      DockNode        ID=0x00000006 Parent=0x0000000D SizeRef=296,701 Split=Y Selected=0x0545BD69
         DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=162,351 Selected=0x0545BD69
         DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=162,348 Selected=0x0EBCCEC8
 
