--- a/imgui.ini
+++ b/imgui.ini
@@ -144,7 +144,7 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1920,1080
+Size=1357,720
 Collapsed=0
 
 [Window][Framebuffer]
@@ -155,7 +155,7 @@ DockId=0x0000000E,0
 
 [Window][Framebuffer 1]
 Pos=307,19
-Size=1315,1061
+Size=1050,701
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -185,16 +185,22 @@ Collapsed=0
 
 [Window][Batching stats 0]
 Pos=0,19
-Size=305,1061
+Size=305,701
 Collapsed=0
-DockId=0x00000010,1
+DockId=0x00000010,0
+
+[Window][test]
+ViewportPos=124,341
+ViewportId=0xD87F7E0C
+Size=211,185
+Collapsed=0
 
 [Docking][Data]
 DockNode              ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
   DockNode            ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
   DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
-DockSpace             ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1061 Split=X Selected=0x92A5F8F1
-  DockNode            ID=0x00000010 Parent=0x09EF459F SizeRef=305,701 Selected=0xF57F7DD5
+DockSpace             ID=0x09EF459F Window=0x9A404470 Pos=420,199 Size=1357,701 Split=X Selected=0x92A5F8F1
+  DockNode            ID=0x00000010 Parent=0x09EF459F SizeRef=305,701 Selected=0xD434317B
   DockNode            ID=0x00000011 Parent=0x09EF459F SizeRef=1613,701 Split=X
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=206,871 Selected=0xE87781F4
     DockNode          ID=0x0000000D Parent=0x00000011 SizeRef=1384,871 Split=X
